# vrnetlab

./: .gitignore  README.md  makefile.include  pyproject.toml  vrnetlab-base.dockerfile
aoscx/docker/: Dockerfile  launch.py
c8000v/docker/: launch.py
cat9kv/: Makefile  README.md
cat9kv/docker/: Dockerfile  launch.py
cisco/asav/: Makefile  cidfile
cisco/c8000v/: Makefile  cidfile
cisco/cat9kv/: Makefile
cisco/csr/: Makefile  cidfile
cisco/ftdv/: Makefile  cidfile
cisco/iol/: README.md
cisco/iol-l2/: Makefile  README.md
cisco/n9kv/: Makefile
cisco/vios/: Makefile
cisco/xrv/: Makefile
cisco/xrv9k/: Makefile  cidfile
cisco/xrv_qcow/: README.md
cisco/xrv_qemu/: Makefile
cmglinux/docker/: Dockerfile  launch.py
common/: vrnetlab.py
csr/docker/: Dockerfile  launch.py
dell_sonic/docker/: launch.py
fortigate/docker/: Dockerfile  launch.py
freebsd/docker/: Dockerfile  launch.py
ftdv/docker/: launch.py
ftosv/docker/: Dockerfile  launch.py
huawei_vrp/docker/: Dockerfile  launch.py
iol/: Makefile  README.md
iol-l2/: README.md
iol-l2/docker/: entrypoint.sh
iol/docker/: config.txt
juniper/vjunosevolved/: Makefile
juniper/vjunosrouter/: Makefile
juniper/vjunosswitch/: Makefile
juniper/vmx/: Makefile
juniper/vqfx/: Makefile
juniper/vsrx/: Makefile
n9kv/: Makefile
n9kv/docker/: launch.py
nxos/docker/: Dockerfile  launch.py
ocnos/docker/: Dockerfile  launch.py
openbsd/docker/: Dockerfile  launch.py
openwrt/docker/: Dockerfile  launch.py
pan/docker/: Dockerfile  (+1 more)
vstc/: Makefile  README.md
xrv9k/: Makefile
(+57 files in other folders)
